--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "database-test-helper": "^1.0.0",
     "invoicedb-test-helper": "^1.0.0",
+    "invoicedb-dynamodb-driver": "^1.0.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "body-parser": "^1.18.2",
