add POST /purchase

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 AWS_ACCESS_KEY_ID=my_aws_key
 AWS_SECRET_ACCESS_KEY=my_secret_aws_key
 
+AUTH_KEY_SGLEARN=/* this is secret key for sglearn servers - role user */
+
+DELIGATE_KEY_ADMIN_SERVER=/* this is secret key for deligated role admin to server */
+
 PORT_LOCAL_PURCHASE=3210
