--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/duongtdn/purchase-server#readme",
   "devDependencies": {
+    "database-abstractor": "^1.0.0",
     "database-test-helper": "^1.0.0",
     "invoicedb-test-helper": "^1.0.0",
     "invoicedb-dynamodb-driver": "^1.0.0",
