--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "database-test-helper": "^1.0.0",
     "invoicedb-test-helper": "^1.0.0",
     "invoicedb-dynamodb-driver": "^1.0.0",
+    "coursedb-dynamodb-driver": "^1.0.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "body-parser": "^1.18.2",
