implement function to process enroll

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "invoicedb-test-helper": "^1.0.0",
     "invoicedb-dynamodb-driver": "^1.0.0",
     "coursedb-dynamodb-driver": "^1.0.0",
+    "coursedb-test-helper": "^1.0.0",
+    "enrolldb-dynamodb-driver": "^1.0.0",
+    "enrolldb-test-helper": "^1.0.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "body-parser": "^1.18.2",
