remove hardcoded auth api host and port

--- a/.env
+++ b/.env
@@ -5,4 +5,7 @@ AUTH_KEY_SGLEARN=/* this is secret key for sglearn servers - role user */
 
 DELIGATE_KEY_ADMIN_SERVER=/* this is secret key for deligated role admin to server */
 
+API_AUTH_HOST=localhost
+API_AUTH_PORT=3100
+
 PORT_LOCAL_PURCHASE=3210
